third commit data tables sql added

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,8 +8,8 @@
     <div>
         <div>
 
-            <h2> Manage <b> Pokemon Database <b/> <button><a href="pokemondatabase">View Database </a></button> </h2>
-            <h2> Catch Pokemon <b/> <button><a href="catchpokemon">View Database </a></button> </h2>
+            <h2> Manage <b> Pokemon Database <b/> <button><a href="pokemondatabase">View Database</a></button> </h2>
+            <h2> Catch Pokemon <b/> <button><a href="catchpokemon">Catch Pokemon</a></button> </h2>
         </div>
 
     </div>
