--- a/app/templates/pokemondatabase.html
+++ b/app/templates/pokemondatabase.html
@@ -7,7 +7,19 @@
 <div>
     <div>
         <div>
-
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Poke_ID</th>
+                <th>Name</th>
+                <th>Poketype</th>
+            </tr>
+            <tr>
+                <td>01</td>
+                <td>Bulba</td>
+                <td>Grass</td>
+            </tr>
+        </table>
 
         </div>
 
