--- a/app/templates/insert.html
+++ b/app/templates/insert.html
@@ -6,25 +6,25 @@
 <h1>Add to your Pokemon Database</h1>
 <div>
     <h2> View <b> Pokemon Database <b/> <button><a href="pokemondatabase">View Database</a></button> </h2>
-    <div class='form'>
+    <div>
         <h2> Add Pokemon to Database </h2>
-        <form action=" " method = "POST">
+        <form  method = "POST" action="">
             {{ form.hidden_tag() }}
-            <p>
-                {{ form.poke_id.label }}    <br>
+            <div class ="form-group">
+                {{ form.poke_id.label }}
                 {{ form.poke_id (size=10)}}
-            </p>
-            <p>
-                {{ form.name.label }}    <br>
+            </div>
+            <div class ="form-group">
+                {{ form.name.label }}
                 {{ form.name (size=30)}}
-            </p>
-            <p>
-                {{ form.poketype.label }}    <br>
+            </div>
+            <div class ="form-group">
+                {{ form.poketype.label }}
                 {{ form.poketype (size=20)}}
-            </p>
-            <p>
+            </div>
+            <div class ="form-group">
                 {{ form.submit }}
-            </p>
+            </div>
 
         </form>
     </div>
