--- a/app/templates/pokemondatabase.html
+++ b/app/templates/pokemondatabase.html
@@ -10,17 +10,18 @@
     <div>
         <table>
             <tr>
-                <th>ID</th>
-                <th>Poke_ID</th>
-                <th>Name</th>
-                <th>Poketype</th>
+                {% for header in headings %}
+                <th>{{header}}</th>
+                {% endfor %}
             </tr>
+            {% for line in table %}
             <tr>
-                <td>01</td>
-                <td>01</td>
-                <td>Bulba</td>
-                <td>Grass</td>
+                <td>{{ line }}</td>
             </tr>
+            {% endfor %}
+
+
+
         </table>
 
     </div>
