--- a/app/templates/catchpokemon.html
+++ b/app/templates/catchpokemon.html
@@ -6,6 +6,7 @@
 <h1>You Gotta Catch'em All!</h1>
 <div>
     <h2> Return Home <b/> <button><a href="home">Home</a></button> </h2>
+    <h2> Throw a Pokeball <b/> <button><a href="catchit">Throw</a></button> </h2>
     <div>
         <div>
 
