--- a/app/templates/pokemondatabase.html
+++ b/app/templates/pokemondatabase.html
@@ -18,7 +18,7 @@
 
             {% for pokemon in table%}
             <tr>
-            <td>{{pokemon.id}}</td> <td>{{pokemon.poke_id}}</td> <td>{{pokemon.name}}</td> <td>{{pokemon.poketype}}</td><td><button><a href="update">Update</a></button></td><td><button><a href="delete">Delete</a></button></td>
+            <td>{{pokemon.id}}</td> <td>{{pokemon.poke_id}}</td> <td>{{pokemon.name}}</td> <td>{{pokemon.poketype}}</td>
              </tr>
             {% endfor %}
         </table>
