update functionality added. MVP met

--- a/app/templates/catchit.html
+++ b/app/templates/catchit.html
@@ -15,14 +15,15 @@
                 {{ form.pokeball_id.label }}
                 {{ form.pokeball_id (size=10)}}
             </div>
-            <div class ="throw-group">
+            <div class ="form-group">
                 {{ form.nickname.label }}
                 {{ form.nickname (size=30)}}
             </div>
-            <div class ="throw-group">
+            <div class ="form-group">
                 {{ form.refid.label }}
                 {{ form.refid (size=10)}}
-            <div class ="throw-group">
+            </div>
+            <div class ="form-group">
                 {{ form.submit }}
             </div>
 
