--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %} Update Nickname {% endblock %}
+{% block body %}
 
-</body>
-</html>
+<h1>Update Nickname</h1>
+
+    <div>
+
+        <form  method = "POST" action="">
+            {{ form.hidden_tag() }}
+            <div class ="form-group">
+                {{ form.nickname.label }}
+                {{ form.nickname (size=30)}}
+            </div>
+            <div class ="form-group">
+                {{ form.submit }}
+            </div>
+
+        </form>
+    </div>
+{% endblock %}
